branches/tikle_diss_com_log/pie/parser/scanner.c
/* Generated by re2c 0.13.5 on Thu Aug  5 17:52:32 2010 */
#line 1 "scanner.re"
/* 
 * Tikle kernel module
 * Copyright (C) 2009  Felipe 'ecl' Pena
 *                     Gustavo 'nst' Oliveira
 * 
 * Contact us at: #c2zlabs@freenode.net - www.c2zlabs.com
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Also thanks to Higor 'enygmata' Euripedes
 */
 
#define _GNU_SOURCE
#include <netinet/in.h>
#include <arpa/inet.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define _IN_SCANNER
#include "scanner.h"
#include "parser.h"

#define YYCTYPE      char
#define YYCURSOR     (s->start)
#define YYLIMIT      (s->end)
#define YYMARKER     (s->ctx)
#define YYCTXMARKER  (s->ctx)

int scan(scanner_state *s, scanner_token *token)
{
	int r = SCANNER_IMPOSSIBLE;
	char *q = s->start;

	#line 57 "scanner.re"


	
#line 52 "scanner.c"
	{
		YYCTYPE yych;
		unsigned int yyaccept = 0;

		yych = *YYCURSOR;
		switch (yych) {
		case 0x00:	goto yy43;
		case '\t':
		case '\r':
		case ' ':	goto yy18;
		case '\n':	goto yy16;
		case '"':	goto yy28;
		case '#':	goto yy20;
		case '%':	goto yy26;
		case '\'':	goto yy27;
		case '(':	goto yy22;
		case ')':	goto yy24;
		case ',':	goto yy8;
		case '-':	goto yy14;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':	goto yy29;
		case ':':	goto yy6;
		case ';':	goto yy4;
		case '@':	goto yy2;
		case 'A':
		case 'a':	goto yy35;
		case 'B':
		case 'C':
		case 'G':
		case 'H':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'Q':
		case 'R':
		case 'V':
		case 'X':
		case 'Y':
		case 'Z':
		case 'b':
		case 'c':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'q':
		case 'r':
		case 'v':
		case 'x':
		case 'y':
		case 'z':	goto yy42;
		case 'D':
		case 'd':	goto yy36;
		case 'E':
		case 'e':	goto yy41;
		case 'F':
		case 'f':	goto yy38;
		case 'I':
		case 'i':	goto yy40;
		case 'P':
		case 'p':	goto yy37;
		case 'S':
		case 's':	goto yy33;
		case 'T':
		case 't':	goto yy34;
		case 'U':
		case 'u':	goto yy31;
		case 'W':
		case 'w':	goto yy39;
		case '{':	goto yy10;
		case '}':	goto yy12;
		default:	goto yy45;
		}
yy2:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);
		switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':	goto yy220;
		default:	goto yy3;
		}
yy3:
#line 60 "scanner.re"
		{ return T_AT; }
#line 160 "scanner.c"
yy4:
		++YYCURSOR;
#line 61 "scanner.re"
		{ return T_END_EXPR; }
#line 165 "scanner.c"
yy6:
		++YYCURSOR;
#line 62 "scanner.re"
		{ return T_COLON; }
#line 170 "scanner.c"
yy8:
		++YYCURSOR;
#line 63 "scanner.re"
		{ return T_COMMA; }
#line 175 "scanner.c"
yy10:
		++YYCURSOR;
#line 64 "scanner.re"
		{ return T_LBRACES; }
#line 180 "scanner.c"
yy12:
		++YYCURSOR;
#line 65 "scanner.re"
		{ return T_RBRACES; }
#line 185 "scanner.c"
yy14:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case '>':	goto yy218;
		default:	goto yy15;
		}
yy15:
#line 218 "scanner.re"
		{ return SCANNER_ERROR; }
#line 195 "scanner.c"
yy16:
		++YYCURSOR;
#line 68 "scanner.re"
		{ return SCANNER_NEWLINE; }
#line 200 "scanner.c"
yy18:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy217;
yy19:
#line 69 "scanner.re"
		{ return SCANNER_IGNORE; }
#line 208 "scanner.c"
yy20:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy215;
yy21:
#line 70 "scanner.re"
		{ return SCANNER_IGNORE; }
#line 216 "scanner.c"
yy22:
		++YYCURSOR;
#line 72 "scanner.re"
		{ return T_LPAREN; }
#line 221 "scanner.c"
yy24:
		++YYCURSOR;
#line 73 "scanner.re"
		{ return T_RPAREN; }
#line 226 "scanner.c"
yy26:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		switch (yych) {
		case 'D':
		case 'd':	goto yy204;
		case 'I':
		case 'i':	goto yy205;
		default:	goto yy15;
		}
yy27:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		goto yy203;
yy28:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		goto yy199;
yy29:
		YYCTXMARKER = YYCURSOR + 1;
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		switch (yych) {
		case '%':	goto yy178;
		case '.':	goto yy173;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':	goto yy174;
		case 'm':	goto yy180;
		case 'p':	goto yy176;
		case 's':	goto yy175;
		default:	goto yy30;
		}
yy30:
#line 140 "scanner.re"
		{
		char *tmp;

		tmp = strndup(q, YYCURSOR - q);
		token->data.num = atoi(tmp);
		token->type = NUMBER;
		token->num_type = TEMPORAL;
		free(tmp);

		return T_NUMBER;
	}
#line 280 "scanner.c"
yy31:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'D':
		case 'd':	goto yy170;
		default:	goto yy47;
		}
yy32:
#line 205 "scanner.re"
		{
		char *tmp;

		tmp = strndup(q, YYCURSOR - q);
		token->type = STRING;
		token->data.str.value = tmp;
		token->data.str.length = (YYCURSOR - q) + 1;

		return T_STRING;
	}
#line 300 "scanner.c"
yy33:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'C':
		case 'c':	goto yy153;
		case 'E':
		case 'e':	goto yy154;
		case 'T':
		case 't':	goto yy155;
		default:	goto yy47;
		}
yy34:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'C':
		case 'c':	goto yy146;
		case 'H':
		case 'h':	goto yy147;
		default:	goto yy47;
		}
yy35:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'F':
		case 'f':	goto yy138;
		case 'L':
		case 'l':	goto yy139;
		default:	goto yy47;
		}
yy36:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'E':
		case 'e':	goto yy112;
		case 'O':
		case 'o':	goto yy113;
		case 'R':
		case 'r':	goto yy115;
		case 'U':
		case 'u':	goto yy116;
		default:	goto yy47;
		}
yy37:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'A':
		case 'a':	goto yy92;
		case 'R':
		case 'r':	goto yy93;
		default:	goto yy47;
		}
yy38:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'O':
		case 'o':	goto yy89;
		default:	goto yy47;
		}
yy39:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'H':
		case 'h':	goto yy84;
		default:	goto yy47;
		}
yy40:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'F':
		case 'f':	goto yy64;
		case 'S':
		case 's':	goto yy66;
		default:	goto yy47;
		}
yy41:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'A':
		case 'a':	goto yy48;
		case 'L':
		case 'l':	goto yy49;
		case 'N':
		case 'n':	goto yy50;
		default:	goto yy47;
		}
yy42:
		yych = *++YYCURSOR;
		goto yy47;
yy43:
		++YYCURSOR;
#line 216 "scanner.re"
		{ return SCANNER_EOF; }
#line 393 "scanner.c"
yy45:
		yych = *++YYCURSOR;
		goto yy15;
yy46:
		++YYCURSOR;
		yych = *YYCURSOR;
yy47:
		switch (yych) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy32;
		}
yy48:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'C':
		case 'c':	goto yy61;
		default:	goto yy47;
		}
yy49:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'S':
		case 's':	goto yy58;
		default:	goto yy47;
		}
yy50:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'D':
		case 'd':	goto yy51;
		default:	goto yy47;
		}
yy51:
		yyaccept = 3;
		yych = *(YYMARKER = ++YYCURSOR);
		switch (yych) {
		case ' ':	goto yy53;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy52;
		}
yy52:
#line 197 "scanner.re"
		{ return T_END; }
#line 539 "scanner.c"
yy53:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'I':
		case 'i':	goto yy55;
		default:	goto yy54;
		}
yy54:
		YYCURSOR = YYMARKER;
		switch (yyaccept) {
		case 0: 	goto yy3;
		case 1: 	goto yy15;
		case 2: 	goto yy30;
		case 3: 	goto yy52;
		case 4: 	goto yy32;
		}
yy55:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'F':
		case 'f':	goto yy56;
		default:	goto yy54;
		}
yy56:
		++YYCURSOR;
#line 196 "scanner.re"
		{ return T_END_IF; }
#line 567 "scanner.c"
yy58:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'E':
		case 'e':	goto yy59;
		default:	goto yy47;
		}
yy59:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy60;
		}
yy60:
#line 195 "scanner.re"
		{ return T_ELSE; }
#line 635 "scanner.c"
yy61:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'H':
		case 'h':	goto yy62;
		default:	goto yy47;
		}
yy62:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy63;
		}
yy63:
#line 199 "scanner.re"
		{ return T_EACH; }
#line 703 "scanner.c"
yy64:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy65;
		}
yy65:
#line 193 "scanner.re"
		{ return T_IF; }
#line 764 "scanner.c"
yy66:
		yyaccept = 4;
		yych = *(YYMARKER = ++YYCURSOR);
		switch (yych) {
		case ' ':	goto yy67;
		default:	goto yy47;
		}
yy67:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'E':
		case 'e':	goto yy69;
		case 'N':
		case 'n':	goto yy68;
		default:	goto yy54;
		}
yy68:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'O':
		case 'o':	goto yy75;
		default:	goto yy54;
		}
yy69:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'Q':
		case 'q':	goto yy70;
		default:	goto yy54;
		}
yy70:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'U':
		case 'u':	goto yy71;
		default:	goto yy54;
		}
yy71:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'A':
		case 'a':	goto yy72;
		default:	goto yy54;
		}
yy72:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'L':
		case 'l':	goto yy73;
		default:	goto yy54;
		}
yy73:
		++YYCURSOR;
#line 201 "scanner.re"
		{ return T_IS_EQUAL; }
#line 820 "scanner.c"
yy75:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'T':
		case 't':	goto yy76;
		default:	goto yy54;
		}
yy76:
		yych = *++YYCURSOR;
		switch (yych) {
		case ' ':	goto yy77;
		default:	goto yy54;
		}
yy77:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'E':
		case 'e':	goto yy78;
		default:	goto yy54;
		}
yy78:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'Q':
		case 'q':	goto yy79;
		default:	goto yy54;
		}
yy79:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'U':
		case 'u':	goto yy80;
		default:	goto yy54;
		}
yy80:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'A':
		case 'a':	goto yy81;
		default:	goto yy54;
		}
yy81:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'L':
		case 'l':	goto yy82;
		default:	goto yy54;
		}
yy82:
		++YYCURSOR;
#line 203 "scanner.re"
		{ return T_IS_NOT_EQUAL; }
#line 873 "scanner.c"
yy84:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'I':
		case 'i':	goto yy85;
		default:	goto yy47;
		}
yy85:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'L':
		case 'l':	goto yy86;
		default:	goto yy47;
		}
yy86:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'E':
		case 'e':	goto yy87;
		default:	goto yy47;
		}
yy87:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy88;
		}
yy88:
#line 190 "scanner.re"
		{ return T_WHILE; }
#line 955 "scanner.c"
yy89:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'R':
		case 'r':	goto yy90;
		default:	goto yy47;
		}
yy90:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy91;
		}
yy91:
#line 189 "scanner.re"
		{ return T_FOR; }
#line 1023 "scanner.c"
yy92:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'R':
		case 'r':	goto yy104;
		default:	goto yy47;
		}
yy93:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'O':
		case 'o':	goto yy94;
		default:	goto yy47;
		}
yy94:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'G':
		case 'g':	goto yy95;
		default:	goto yy47;
		}
yy95:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'R':
		case 'r':	goto yy96;
		default:	goto yy47;
		}
yy96:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'E':
		case 'e':	goto yy97;
		default:	goto yy47;
		}
yy97:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'S':
		case 's':	goto yy98;
		default:	goto yy47;
		}
yy98:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'S':
		case 's':	goto yy99;
		default:	goto yy47;
		}
yy99:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'I':
		case 'i':	goto yy100;
		default:	goto yy47;
		}
yy100:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'V':
		case 'v':	goto yy101;
		default:	goto yy47;
		}
yy101:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'E':
		case 'e':	goto yy102;
		default:	goto yy47;
		}
yy102:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy103;
		}
yy103:
#line 187 "scanner.re"
		{ return T_PROGRESSIVE; }
#line 1154 "scanner.c"
yy104:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'T':
		case 't':	goto yy105;
		default:	goto yy47;
		}
yy105:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'I':
		case 'i':	goto yy106;
		default:	goto yy47;
		}
yy106:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'T':
		case 't':	goto yy107;
		default:	goto yy47;
		}
yy107:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'I':
		case 'i':	goto yy108;
		default:	goto yy47;
		}
yy108:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'O':
		case 'o':	goto yy109;
		default:	goto yy47;
		}
yy109:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'N':
		case 'n':	goto yy110;
		default:	goto yy47;
		}
yy110:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy111;
		}
yy111:
#line 192 "scanner.re"
		{ return T_PARTITION; }
#line 1257 "scanner.c"
yy112:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'C':
		case 'c':	goto yy129;
		case 'L':
		case 'l':	goto yy128;
		default:	goto yy47;
		}
yy113:
		++YYCURSOR;
		switch ((yych = *YYCURSOR)) {
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy46;
		default:	goto yy114;
		}
yy114:
#line 188 "scanner.re"
		{ return T_DO; }
#line 1327 "scanner.c"
yy115:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'O':
		case 'o':	goto yy125;
		default:	goto yy47;
		}
yy116:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'P':
		case 'p':	goto yy117;
		default:	goto yy47;
		}
yy117:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'L':
		case 'l':	goto yy118;
		default:	goto yy47;
		}
yy118:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'I':
		case 'i':	goto yy119;
		default:	goto yy47;
		}
yy119:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'C':
		case 'c':	goto yy120;
		default:	goto yy47;
		}
yy120:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'A':
		case 'a':	goto yy121;
		default:	goto yy47;
		}
yy121:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'T':
		case 't':	goto yy122;
